# shop

./: conftest.py  pyproject.toml  pytest.ini
catalog/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_basket.py  0003_order_orderproducts.py  0004_cashback.py
catalog/tests/: test_guest_endpoints.py
catalog/tests/fixtures/: categories_fixrure.json  category_fixture.json  discount_fixture.json  products_fixture.json  seller_fixture.json
shop/: __init__.py  celery.py  settings.py  urls.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_users.py
